<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.oracle.coherence.kubernetes</groupId>
    <artifactId>samples-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <relativePath>../../../pom.xml</relativePath>
  </parent>

  <artifactId>helidon-sample</artifactId>
  <name>Storage-Disabled Client Sample - Helidon</name>
  <version>1.0.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>8</maven.compiler.source>
    <maven.compiler.target>8</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.oracle.coherence</groupId>
      <artifactId>coherence</artifactId>
    </dependency>
    <dependency>
      <groupId>io.helidon.bundles</groupId>
      <artifactId>helidon-bundles-webserver</artifactId>
    </dependency>

    <!-- test dependencies -->
    <dependency>
      <groupId>com.oracle.coherence.kubernetes</groupId>
      <artifactId>samples-testing-support</artifactId>
      <version>1.0.0-SNAPSHOT</version>
      <classifier>tests</classifier>
      <scope>test</scope>
      <type>test-jar</type>
    </dependency>
    
    <dependency>
      <groupId>com.oracle.bedrock</groupId>
      <artifactId>bedrock-runtime</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.oracle.bedrock</groupId>
      <artifactId>bedrock-runtime-k8s</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.oracle.bedrock.coherence</groupId>
      <artifactId>coherence-12.2.1-testing-support</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-compress</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <testResources>
      <!-- process values/*.yaml test resources with filtering -->
      <testResource>
        <directory>${project.basedir}/src/test/resources</directory>
        <includes>
          <include>*.yaml</include>
        </includes>
        <filtering>true</filtering>
      </testResource>
    </testResources>
    
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>${maven.assembly.plugin.version}</version>
        <executions>
          <execution>
            <id>helm-webserver</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <finalName>webserver-${project.version}</finalName>
              <attach>false</attach>
              <descriptors>
                <descriptor>src/assembly/helm-assembly.xml</descriptor>
              </descriptors>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  
  <profiles>
    <profile>
      <id>docker</id>
      <activation>
        <activeByDefault>false</activeByDefault>
        <property>
          <name>project.docker</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>com.google.cloud.tools</groupId>
            <artifactId>jib-maven-plugin</artifactId>
            <configuration>
              <to>
                <image>${project.artifactId}</image>
                <tags>
                  <tag>${project.version}</tag>
                  <tag>latest</tag>
                </tags>
              </to>
              <container>
                <!-- good defaults intended for containers -->
                <jvmFlags>
                  <jmxFlag>-server</jmxFlag>
                  <jmxFlag>-Djava.awt.headless=true</jmxFlag>
                  <jmxFlag>-Dcoherence.distributed.localstorage=false</jmxFlag>
                  <jmxFlag>-XX:+UnlockExperimentalVMOptions</jmxFlag>
                  <jmxFlag>-XX:+UseCGroupMemoryLimitForHeap</jmxFlag>
                  <jmxFlag>-XX:InitialRAMFraction=2</jmxFlag>
                  <jmxFlag>-XX:MinRAMFraction=2</jmxFlag>
                  <jmxFlag>-XX:MaxRAMFraction=2</jmxFlag>
                  <jmxFlag>-XX:+UseG1GC</jmxFlag>
                </jvmFlags>
                <mainClass>com.oracle.coherence.examples.Main</mainClass>
                <ports>
                  <port>8080</port>
                </ports>
                </container>
              </configuration>
              <executions>
                <execution>
                  <goals>
                      <goal>dockerBuild</goal>
                  </goals>
                  <phase>package</phase>
                </execution>
              </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <!-- used for integration tests only -->
    
    <profile>
      <id>dockerPush</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>tag-for-push</id>
                <phase>install</phase>
                <configuration>
                  <executable>docker</executable>
                  <workingDirectory>${project.build.directory}/docker</workingDirectory>
                  <arguments>
                    <argument>tag</argument>
                    <argument>${project.artifactId}:${project.version}</argument>
                    <argument>${docker.push.tag.prefix}${project.artifactId}:${project.version}</argument>
                  </arguments>
                </configuration>
                <goals>
                  <goal>exec</goal>
                </goals>
              </execution>
              <execution>
                <id>docker-push-explicit-version</id>
                <phase>install</phase>
                <configuration>
                  <executable>docker</executable>
                  <workingDirectory>${project.build.directory}/docker</workingDirectory>
                  <arguments>
                    <argument>push</argument>
                    <argument>${docker.push.tag.prefix}${project.artifactId}:${project.version}</argument>
                  </arguments>
                </configuration>
                <goals>
                  <goal>exec</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    
  </profiles>
  
</project>
